src/main/java/com/example/linkingrest/error/exception/BookmarkNotFoundException.java
package com.example.linkingrest.error.exception;

public class BookmarkNotFoundException extends RuntimeException {
    public BookmarkNotFoundException(){
        super();
    }

}
